--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "adentro-landing",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.12.1",
-    "@cloudflare/workers-types": "^4.20240725.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "eslint-plugin-next-on-pages": "^1.12.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "vercel": "^35.2.1",
-    "wrangler": "^3.67.1"
-  }
+	"name": "adentro-landing",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"pages:build": "npx @cloudflare/next-on-pages",
+		"preview": "npm run pages:build && wrangler pages dev",
+		"deploy": "npm run pages:build && wrangler pages deploy",
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
+	},
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"next": "14.1.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^5.2.1",
+		"sass": "^1.77.8",
+		"tailwind-merge": "^2.4.0"
+	},
+	"devDependencies": {
+		"@cloudflare/next-on-pages": "^1.13.0",
+		"@cloudflare/workers-types": "^4.20240725.0",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"eslint-plugin-next-on-pages": "^1.12.1",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5",
+		"vercel": "^35.2.1",
+		"wrangler": "^3.67.1"
+	}
 }
