added integration with sanity, header & footer components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,16 @@
 				"name": "next"
 			}
 		],
+
 		"paths": {
 			"@/*": ["./*"]
 		},
-		"types": ["@cloudflare/workers-types/2023-07-01"]
+
+		"types": ["@cloudflare/workers-types/2023-07-01"],
+
+		"target": "ES2017"
 	},
+
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
 }
