--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
 	},
 	"dependencies": {
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/vision": "^3.52.4",
 		"clsx": "^2.1.1",
 		"next": "14.1.0",
+		"next-sanity": "^9.4.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"sanity": "^3.52.4",
 		"sass": "^1.77.8",
+		"styled-components": "^6.1.12",
 		"tailwind-merge": "^2.4.0"
 	},
 	"devDependencies": {
